--- a/src/pages/welcome/Welcome.css
+++ b/src/pages/welcome/Welcome.css
@@ -340,6 +340,7 @@
     width: 250px;
     padding:0 20px;
     overflow-y: scroll;
+    z-index: 10;
 }
 .Welcome.profile_tool_bar_elements {
     background-color: white;
