--- a/src/pages/informations/informations.css
+++ b/src/pages/informations/informations.css
@@ -112,6 +112,12 @@
     background-repeat  : no-repeat;
     background-size    : cover;
 }
+.Infos.partner-i.v9 {
+    background: url("./partners_img/theLordOfShadow.png");
+    background-position: center;
+    background-repeat  : no-repeat;
+    background-size    : cover;
+}
 
 .Infos.partner-description {
     position: absolute;
