--- a/src/pages/welcome/Welcome.css
+++ b/src/pages/welcome/Welcome.css
@@ -449,7 +449,7 @@
     .Welcome.Canvas {  
         margin-left: auto;
         margin-right: auto;
-        margin-top: -130px;
+        margin-top: 0;
     }
     .Welcome.profile_tool_bar_color_show {
         display: block;
