--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: white;
   margin: 0;
-  background: rgb(255, 255, 255);
   overflow-x: hidden;
   overflow-y: overlay;
   position:relative;
@@ -68,7 +67,7 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 10px 0 10px;
+  margin: 0 10px;
   z-index: 2;
   padding: 3px;
 }
@@ -159,12 +158,10 @@ a {
 
 /* CONTACTS */
 .form-container {
-  margin: 50px auto 50px;
+  margin: 50px auto;
   width: 70%;
   padding: 20px;
   color: rgb(53, 53, 53);
-  border-radius: 4px;
-  border: 1px solid #b9b9b9;
   background: rgba(255, 255, 255, 0.25 );
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.116);
   backdrop-filter: blur( 4px );
@@ -251,6 +248,7 @@ a {
   /* width */
 ::-webkit-scrollbar {
   width: 10px;
+  margin: 5px;
 }
 ::-webkit-scrollbar:horizontal {
   height: 10px;
@@ -258,7 +256,9 @@ a {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #2ea1e894;
+  border-radius: 90px;
+  box-shadow: inset 0 0 20px 20px #2ea1e894;
+  border: solid 1px transparent;
 }
 
 /* Handle on hover */
@@ -356,7 +356,6 @@ a {
   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.158 );
   backdrop-filter: blur( 4px );
   -webkit-backdrop-filter: blur( 4px );
-  border-radius: 10px;
   border: 1px solid rgba(148, 212, 255, 0.582);
   width: calc(100% - 20px);
   padding: 15px 50px 25px;
@@ -425,9 +424,7 @@ a {
   border: 1px solid rgba(183, 255, 165, 0.582);
   color: rgb(255, 255, 255);
 }
-.Global.Contener.FullSize {
-  
-}
+
 @media (max-width: 500px) {
   .default_message {
       width: 100%;
