--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -115,7 +115,7 @@
 .topbar ul {
   position: absolute;
   top: 70px;
-  left: -20px;
+  left: -30px;
   z-index: 200;
   opacity: 0;
   -webkit-transition: .25s 0s ease-in-out;
@@ -125,15 +125,16 @@
 }
 
 .topbar li {
-  margin-bottom: 1em;
-  color: #000000;
+  color:#1a72ac;
   text-decoration: none;
   display: flex;
   align-items: center;
   cursor: pointer;
+  padding: 10px;
 }
 
 .topbar svg {
   width: 30px;
   margin-right: 10px;
+  color: #000000;
 }
