--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -66,7 +66,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  background: #000000;
+  background: #6d6d6d;
 }
 
 .topbar .hamburger:before { top: -10px; }
@@ -77,7 +77,7 @@
 
 .topbar input:checked + .menu {
   width: 288px;
-  height: 348px;
+  height: 338px;
   border-radius: 16px;
   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.25 );
   background-color: rgb(255, 255, 255);
@@ -114,7 +114,7 @@
 
 .topbar ul {
   position: absolute;
-  top: 70px;
+  top: 50px;
   left: -30px;
   z-index: 200;
   opacity: 0;
@@ -125,16 +125,30 @@
 }
 
 .topbar li {
-  color:#1a72ac;
+  color:rgb(41, 41, 41);
   text-decoration: none;
   display: flex;
   align-items: center;
   cursor: pointer;
   padding: 10px;
+  transition: 0.3s;
 }
 
 .topbar svg {
   width: 30px;
   margin-right: 10px;
-  color: #000000;
+  color: #3f3f3f;
+  transition: 0.3s;
+}
+
+.topbar li:hover {
+  color:#1a72ac;
+}
+
+.topbar li:hover svg {
+  color: white;
+  background: #1a72ac;
+  padding: 5px;
+  border-radius: 90px;
+  transform: scale(1.3);
 }
