--- a/styles/404.module.css
+++ b/styles/404.module.css
@@ -6,12 +6,15 @@
 }
 
 .imageContener {
-    position: relative;
     width: 700px;
     max-width: calc(100% - 100px);
     aspect-ratio: 700 / 500;
-    display: block;
-    margin: 20px auto 0;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    opacity: 0.5;
 }
 
 .suggestionList {
